@@ -1,6 +1,10 @@
+2010-03-29 Borut Razem <borut.razem AT siol.net>
+
+	* packages/build.rsync: added
+
 2010-03-21 Borut Razem <borut.razem AT siol.net>
 
-	* packages/build.wget/Makefilei: updated to wget 1.12
+	* packages/build.wget/Makefile: updated to wget 1.12
 
 2010-02-24 Borut Razem <borut.razem AT siol.net>
 
